# semcode

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  semcod_settings.toml.sample
.github/workflows/: ci.yml
docs/: TECHNICAL_OVERVIEW.md
src/semcod/: cli.py  logger.py  settings.py
src/semcod/api/: __init__.py  dependencies.py  jobs.py  main.py  telemetry.py
src/semcod/chunking/: __init__.py  code2prompt_adapter.py  tree_sitter_chunker.py
src/semcod/embeddings/: __init__.py  providers.py
src/semcod/frontend/: app.py  cli.py  gradio_app.py
src/semcod/ingestion/: __init__.py  manager.py
src/semcod/rag/: __init__.py  pipeline.py
src/semcod/services/: __init__.py  indexer.py
src/semcod/storage/: __init__.py  milvus_store.py  registry.py
src/semcode/: __init__.py  cli.py  logger.py  settings.py  version.py
src/semcode/api/: __init__.py  dependencies.py  main.py  telemetry.py
src/semcode/chunking/: __init__.py  tree_sitter_chunker.py
src/semcode/embeddings/: __init__.py  providers.py
src/semcode/frontend/: app.py  cli.py  gradio_app.py
src/semcode/ingestion/: manager.py
src/semcode/rag/: pipeline.py
src/semcode/services/: indexer.py
src/semcode/storage/: __init__.py  milvus_store.py  registry.py
tests/: test_chunker.py  test_embeddings_factory.py
tests/integration/: test_api_endpoints.py  test_indexer_service.py
