[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "semcod"
version = "0.1.0"
description = "Semantic code search engine with repository ingestion, chunking, embeddings, Milvus storage, and multimodal querying."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Semantic Code Search Team" }
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.0",
  "openai>=1.30.0",
  "cohere>=5.3.0",
  "jina-hubble-sdk>=0.30.0,<0.40.0",
  "huggingface-hub>=0.21.0",
  "tree-sitter==0.20.2",
  "tree-sitter-languages==1.10.2",
  "pymilvus>=2.4.4",
  "llama-cpp-python>=0.2.82",
  "typer[all]>=0.12.3",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.29",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "langsmith>=0.1.56",
  "streamlit>=1.32.0",
  "rich>=13.7.1",
  "structlog>=24.1.0",
  "requests>=2.31.0",
  "transformers>=4.57.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.3.5",
  "mypy>=1.9.0",
  "types-requests>=2.31.0.20240402"
]

[project.urls]
Homepage = "https://example.com/semcod"
Repository = "https://example.com/semcod/repo"
Documentation = "https://example.com/semcod/docs"

[project.scripts]
semcod = "semcod.cli:app"
semcod-api = "semcod.api.main:run"
semcod-streamlit = "semcod.frontend.app:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/semcod"]

[tool.uv]
package = true
