[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "semcode"
version = "1.0.0"
description = "Semantic code search engine with repository ingestion, chunking, embeddings, Milvus storage, and multimodal querying."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Semantic Code Search Team" }
]
dependencies = [
  "alembic>=1.13.1",
  "cohere>=5.3.0",
  "fastapi>=0.110.0",
  "flax",
  "gradio>=5.49.1",
  "huggingface-hub>=0.21.0",
  "httpx>=0.27.0",
  "jina-hubble-sdk>=0.30.0,<0.40.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.0",
  "langsmith>=0.1.56",
  #"llama-cpp-python>=0.2.82",
  "openai>=1.30.0",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "pymilvus>=2.4.4",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "rich>=13.7.1",
  "SQLAlchemy>=2.0.29",
  "streamlit>=1.32.0",
  "structlog>=24.1.0",
  "torch",
  "transformers>=4.57.1",
  "tree-sitter==0.20.2",
  "tree-sitter-languages==1.10.2",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.27.0",
  "watchdog>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.3.5",
  "mypy>=1.9.0",
  "types-requests>=2.31.0.20240402"
]
ui = [
  "gradio>=4.0.0"
]

[project.urls]
Homepage = "https://example.com/semcode"
Repository = "https://example.com/semcode/repo"
Documentation = "https://example.com/semcode/docs"

[project.scripts]
semcode = "semcode.cli:app"
semcode-api = "semcode.api.main:run"
semcode-streamlit = "semcode.frontend.cli:main"
semcode-gradio = "semcode.frontend.gradio_app:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/semcode"]
include = ["src/semcode/VERSION"]

